1.9 - Enhance button and layout styles: adjust sizing, padding, and display properties for better alignment and consistency - Refine debug panel `c` value formatting with fixed precision - Improve `dive` button rendering logic and display initialization

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -299,10 +299,14 @@ label, .sliderValue {
 
 #dives {
     display: none;
+    align-items: center;
 }
 
 button.dive {
-    width: 57px;
+    width: 100px;
+    height: 40px;
+    text-wrap: wrap;
+    display: inline-flex;
 }
 
 .switch-field {
@@ -316,6 +320,7 @@ button.dive {
 
 .switch-field span {
     padding: 8px 5px 0 0;
+    font-weight: bolder;
 }
 
 .switch-field button {
@@ -336,7 +341,7 @@ button.dive {
     width: fit-content;
     position: relative;
     margin: 0 10px 0 10px;
-    padding: 0 20px 5px 20px;
+    padding: 5px 20px 5px 20px;
     cursor: auto;
 }
 
@@ -345,8 +350,7 @@ button.dive {
 }
 
 #controlButtons span {
-    /*font-size: 12px;*/
-    /*font-weight: bolder;*/
+    font-weight: bolder;
 }
 
 #controlButtons button {
@@ -375,6 +379,7 @@ p#presets, p#dives {
 
 p#presets span, p#dives span {
     padding: 0 5px 0 0;
+    font-weight: bolder;
 }
 
 .highlight {
